WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148135
[iOS] Safari’s Web Content process crashes when decoding an NSError containing an identity
https://bugs.webkit.org/show_bug.cgi?id=148135
Summary
[iOS] Safari’s Web Content process crashes when decoding an NSError containin...
mitz
Reported
2015-08-18 12:28:27 PDT
When an NSError from Safari’s Networking process containing a SecIdentity in its user info is decoded in the Web Content process, decoding fails due to the Web Content process not being allowed to decode keys.
Attachments
Allow keys to be decoded in the Web Content and UI processes
(2.19 KB, patch)
2015-08-18 12:33 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2015-08-18 12:33:22 PDT
Created
attachment 259290
[details]
Allow keys to be decoded in the Web Content and UI processes
mitz
Comment 2
2015-08-18 21:50:29 PDT
Fixed in <
http://trac.webkit.org/r188627
>.
David Kilzer (:ddkilzer)
Comment 3
2016-03-26 05:03:41 PDT
<
rdar://problem/22205157
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug