[iOS] Safari’s Web Content process crashes when decoding an NSError containing an identity https://bugs.webkit.org/show_bug.cgi?id=148135

Reviewed by Sam Weinig.

* Configurations/WebContent-iOS.entitlements: Added the com.apple.identities keychain
  access group. The Networking process already has it since r169655.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitialize): Always allow the UI process to decode keys.



Canonical link: https://commits.webkit.org/166285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188627 268f45cc-cd09-0410-ab3c-d52691b4dbfc