Source/WebKit2/UIProcess/Cocoa/WebProcessPoolCocoa.mm
@@ -53,6 +53,7 @@
 #endif
 
 #if PLATFORM(IOS)
+#import "ArgumentCodersCF.h"
 #import <WebCore/RuntimeApplicationChecksIOS.h>
 #else
 #import <QuartzCore/CARemoteLayerServer.h>
@@ -143,6 +144,7 @@ void WebProcessPool::platformInitialize()
     registerNotificationObservers();
 
 #if PLATFORM(IOS)
+    IPC::setAllowsDecodingSecKeyRef(true);
     WebKit::WebMemoryPressureHandler::singleton();
 #endif
 }
